--- a/eddist-server/client/index.html
+++ b/eddist-server/client/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  {{#if canonical}}
+  <link rel="canonical" href="{{canonical}}" />
+  {{/if}}
   <title>{{bbs_name}}</title>
 </head>
 
